[gd_scene load_steps=12 format=3 uid="uid://5cibpnwco0ys"]

[ext_resource type="Script" path="res://entities/actors/enemies/goblins/gobbo.gd" id="1_hloi8"]
[ext_resource type="Texture2D" uid="uid://cfi2oh8vcvogi" path="res://entities/actors/enemies/goblins/manic.png" id="2_vn6c8"]
[ext_resource type="Texture2D" uid="uid://oytese7n6tpy" path="res://entities/actors/enemies/goblins/neutral.png" id="3_sv2lv"]
[ext_resource type="AudioStream" uid="uid://cbh1glx4yiba" path="res://entities/actors/enemies/goblins/xtremeAlarm [2024-02-01 145038].wav" id="4_bwe3c"]
[ext_resource type="AudioStream" uid="uid://k5y566guwsk" path="res://entities/actors/enemies/goblins/IdleCalm [2024-02-01 145106].wav" id="5_45t75"]
[ext_resource type="AudioStream" uid="uid://biovehck2vmbi" path="res://entities/actors/enemies/goblins/IdleLong [2024-02-01 140649].wav" id="6_s84kr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pcvt2"]
friction = 0.6
bounce = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_67gh6"]
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1rhvk"]
albedo_color = Color(0.203922, 0.333333, 0.137255, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_qmbih"]
material = SubResource("StandardMaterial3D_1rhvk")
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_4tdir"]
radius = 0.1

[node name="Gobbo" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_pcvt2")
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1_hloi8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_67gh6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_qmbih")

[node name="Faceup" type="Sprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, -1.31134e-08, 0.3, 0, -0.3, -1.31134e-08, 0, 0.12, 0)
double_sided = false
texture = ExtResource("2_vn6c8")

[node name="Facedown" type="Sprite3D" parent="."]
transform = Transform3D(-0.3, -2.62268e-08, 1.14641e-15, 0, -1.31134e-08, -0.3, 2.62268e-08, -0.3, 1.31134e-08, 0, -0.12, 0)
double_sided = false
texture = ExtResource("3_sv2lv")

[node name="anchor" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.333, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="anchor"]
shape = SubResource("SphereShape3D_4tdir")

[node name="JoltPinJoint3D" type="JoltPinJoint3D" parent="anchor"]
node_a = NodePath("../..")
node_b = NodePath("..")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.403465, 0.265908, 0)

[node name="JoltPinJoint3D2" type="JoltPinJoint3D" parent="anchor"]
node_a = NodePath("../..")
node_b = NodePath("..")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.265908, -0.489369)

[node name="JoltPinJoint3D3" type="JoltPinJoint3D" parent="anchor"]
node_a = NodePath("../..")
node_b = NodePath("..")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.511722, 0.265908, 0)

[node name="JoltPinJoint3D4" type="JoltPinJoint3D" parent="anchor"]
node_a = NodePath("../..")
node_b = NodePath("..")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.265908, 0.484266)

[node name="Alarm" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_bwe3c")

[node name="Idle" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_45t75")

[node name="Idle2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_s84kr")

[node name="NoiseTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="NoiseTimer" to="." method="_on_noise_timer_timeout"]
